--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
     <!-- Mapbox GL JS CSS -->
     <link
-    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
-    rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+      rel="stylesheet"
     />
     <script src="map.js" type="module"></script>
   </head>
   <body>
-    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <header style="display: flex; gap: 1em; align-items: baseline;">
+      <h1>🚴🏼‍♀️ Bikewatching</h1>
+      <label style="margin-left: auto;">
+        Filter by time:
+        <input type="range" id="time-slider" min="-1" max="1440" step="5" value="-1" />
+        <time id="selected-time" style="display: block;"></time>
+        <em id="any-time" style="display: block; color: gray; font-style: italic;">(any time)</em>
+      </label>
+    </header>
+
     <div id="map">
-        <svg></svg>
+      <svg></svg>
     </div>
   </body>
 </html>
