--- a/index.html
+++ b/index.html
@@ -29,18 +29,9 @@
       <svg></svg>
     </div>
     <div class="legend">
-        <div class="legend-item" style="--departure-ratio: 1">
-          <div class="swatch"></div>
-          <span>More departures</span>
-        </div>
-        <div class="legend-item" style="--departure-ratio: 0.5">
-          <div class="swatch"></div>
-          <span>Balanced</span>
-        </div>
-        <div class="legend-item" style="--departure-ratio: 0">
-          <div class="swatch"></div>
-          <span>More arrivals</span>
-        </div>
+        <div style="--departure-ratio: 1">More departures</div>
+        <div style="--departure-ratio: 0.5">Balanced</div>
+        <div style="--departure-ratio: 0">More arrivals</div>
       </div>
   </body>
 </html>
