--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
     <div id="map">
       <svg></svg>
     </div>
-    <div class="legend">
-        <div style="--departure-ratio: 1">More departures</div>
-        <div style="--departure-ratio: 0.5">Balanced</div>
-        <div style="--departure-ratio: 0">More arrivals</div>
+    <div class="legend-row">
+        <span class="legend-label">LEGEND:</span>
+        <div class="legend-item" style="--departure-ratio: 1">
+          <span class="dot"></span>More departures
+        </div>
+        <div class="legend-item" style="--departure-ratio: 0.5">
+          <span class="dot"></span>Balanced
+        </div>
+        <div class="legend-item" style="--departure-ratio: 0">
+          <span class="dot"></span>More arrivals
+        </div>
       </div>
   </body>
 </html>
