--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <script src="map.js" type="module"></script>
   </head>
   <body>
-    <header style="display: flex; gap: 1em; align-items: baseline;">
-      <h1>🚴🏼‍♀️ Bikewatching</h1>
-      <label style="margin-left: auto;">
-        Filter by time:
-        <input type="range" id="time-slider" min="-1" max="1440" step="5" value="-1" />
-        <time id="selected-time" style="display: block;"></time>
-        <em id="any-time" style="display: block; color: gray; font-style: italic;">(any time)</em>
-      </label>
-    </header>
+    <header class="page-header">
+        <h1>🚴🏼‍♀️ Bikewatching</h1>
+        <div class="slider-group">
+          <label for="time-slider">Filter by time:</label>
+          <input type="range" id="time-slider" min="-1" max="1439" value="-1" />
+          <time id="selected-time"></time>
+          <em id="any-time">(any time)</em>
+        </div>
+      </header>
 
     <div id="map">
       <svg></svg>
